--- a/index.html
+++ b/index.html
@@ -29,12 +29,56 @@
 
 
             </div>
-            <div class="col-9"> Test 2 </div>
+            <div class="col-9">
+
+                <div class="m-5 row justify-content-around">
+                    <!-- todo start -->
+                    <div class="col">
+                        <h2>To Do</h2>
+                        <ul id="list-toDo" class="list-group"></ul>
+                    </div>
+                    <!-- todo end -->
+                    <!-- in progress start -->
+                    <div class="col">
+                        <h3>In Progress</h3>
+                        <ul id="list-inProgress" class="list-group">
+                            <li class="list-group-item">
+                                <span class="badge badge-primary badge-pill">05/28/2020</span>
+                                <p class="m-1">Sample task in progress</p>
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- in progress end -->
+                    <!-- in review start -->
+                    <div class="col">
+                        <h2>In Review</h2>
+                        <ul id="list-inReview" class="list-group">
+                            <li class="list-group-item">
+                                <span class="badge badge-primary badge-pill">05/28/2020</span>
+                                <p class="m-1">Sample task in review</p>
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- in review end -->
+                    <!-- done start -->
+                    <div class="col">
+                        <h2>Done</h2>
+                        <ul id="list-done" class="list-group">
+                            <li class="list-group-item">
+                                <span class="badge badge-primary badge-pill">05/28/2020</span>
+                                <p class="m-1">Sample task that's done</p>
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- done end -->
+                </div>
+
+            </div>
+
         </div>
 
-        <div id="row2" class="row">
 
-            <!-- <div class="col-2">
+        <!-- <div class="col-2">
                 Test 3
             </div>
             <div class="col-2"></div>
@@ -43,47 +87,39 @@
             <div class="col-2"></div>
         </div> -->
 
-        <div class="m-5 row justify-content-around">
-            <!-- todo start -->
-            <div class="col">
-              <h2>To Do</h2>
-              <ul id="list-toDo" class="list-group"></ul>
+
+
+        <!-- <div class="card-group">
+            <div class="card">
+              <img src="..." class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+              </div>
             </div>
-            <!-- todo end -->
-            <!-- in progress start -->
-            <div class="col">
-              <h2>In Progress</h2>
-              <ul id="list-inProgress" class="list-group">
-                <li class="list-group-item">
-                  <span class="badge badge-primary badge-pill">05/28/2020</span>
-                  <p class="m-1">Sample task in progress</p>
-                </li>
-              </ul>
+            <div class="card">
+              <img src="..." class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+              </div>
             </div>
-            <!-- in progress end -->
-            <!-- in review start -->
-            <div class="col">
-              <h2>In Review</h2>
-              <ul id="list-inReview" class="list-group">
-                <li class="list-group-item">
-                  <span class="badge badge-primary badge-pill">05/28/2020</span>
-                  <p class="m-1">Sample task in review</p>
-                </li>
-              </ul>
+            <div class="card">
+              <img src="..." class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+              </div>
             </div>
-            <!-- in review end -->
-            <!-- done start -->
-            <div class="col">
-              <h2>Done</h2>
-              <ul id="list-done" class="list-group">
-                <li class="list-group-item">
-                  <span class="badge badge-primary badge-pill">05/28/2020</span>
-                  <p class="m-1">Sample task that's done</p>
-                </li>
-              </ul>
-            </div>
-            <!-- done end -->
-          </div> 
+          </div> -->
+
+
+
+
+
 
 
         <script src="script.js"></script>
