adjusted html layout and fixed apiendpoints to units of temp measure

--- a/index.html
+++ b/index.html
@@ -30,15 +30,16 @@
 
             </div>
             <div class="col-9">
+                <!-- This is where current weather data will appear -->
+                <div class="row">
+                    <div class="col-md-12" id="current">
 
-                <div class="m-5 row justify-content-around">
-                    <!-- todo start -->
-                    <div class="col">
-                        <h2>To Do</h2>
-                        <ul id="list-toDo" class="list-group"></ul>
                     </div>
-                    <!-- todo end -->
-                    <!-- in progress start -->
+                </div>
+
+                <div class="m-5 row justify-content-around" id="dailyweather">
+                    
+                    <!-- daily weather cards -->
                     <div class="col">
                         <h3>In Progress</h3>
                         <ul id="list-inProgress" class="list-group">
@@ -48,79 +49,13 @@
                             </li>
                         </ul>
                     </div>
-                    <!-- in progress end -->
-                    <!-- in review start -->
-                    <div class="col">
-                        <h2>In Review</h2>
-                        <ul id="list-inReview" class="list-group">
-                            <li class="list-group-item">
-                                <span class="badge badge-primary badge-pill">05/28/2020</span>
-                                <p class="m-1">Sample task in review</p>
-                            </li>
-                        </ul>
-                    </div>
-                    <!-- in review end -->
-                    <!-- done start -->
-                    <div class="col">
-                        <h2>Done</h2>
-                        <ul id="list-done" class="list-group">
-                            <li class="list-group-item">
-                                <span class="badge badge-primary badge-pill">05/28/2020</span>
-                                <p class="m-1">Sample task that's done</p>
-                            </li>
-                        </ul>
-                    </div>
-                    <!-- done end -->
+                    <!-- end daily weather cards -->
+                  
                 </div>
 
             </div>
 
         </div>
-
-
-        <!-- <div class="col-2">
-                Test 3
-            </div>
-            <div class="col-2"></div>
-            <div class="col-2"></div>
-            <div class="col-2"></div>
-            <div class="col-2"></div>
-        </div> -->
-
-
-
-        <!-- <div class="card-group">
-            <div class="card">
-              <img src="..." class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-              </div>
-            </div>
-            <div class="card">
-              <img src="..." class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-              </div>
-            </div>
-            <div class="card">
-              <img src="..." class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-              </div>
-            </div>
-          </div> -->
-
-
-
-
-
-
 
         <script src="script.js"></script>
 </body>
