--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
 <body>
     <nav class="navbar navbar-light bg-light">
+        <header class="header">
         <span class="navbar-brand mb-0 h1">Weather Dashboard</span>
+    </header>
     </nav>
     <div class="container">
         <div class="row" id="row1">
@@ -44,7 +46,7 @@
                         <h3>In Progress</h3>
                         <ul id="list-inProgress" class="list-group">
                             <li class="list-group-item">
-                                <span class="badge badge-primary badge-pill">05/28/2020</span>
+                                <span class="badge badge-primary badge-pill">In progress</span>
                                 <p class="m-1">Sample task in progress</p>
                             </li>
                         </ul>
