--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 <body>
     <nav class="navbar navbar-light bg-light">
         <header class="header">
-        <span class="navbar-brand mb-0 h1">Weather Dashboard</span>
+        <span class="navbar-brand mb-0 h1">
+        <h3 class="text">Weather Dashboard</h3>
+
+        </span>
     </header>
     </nav>
     <div class="container">
