rendered additional html weather elements

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
                 <div class="m-5 row justify-content-around" id="dailyweather">
                     
                     <!-- daily weather cards -->
-                    <div class="col">
+                    <div class="col current">
+
                         <h3>In Progress</h3>
                         <ul id="list-inProgress" class="list-group">
                             <li class="list-group-item">
@@ -56,12 +57,12 @@
                     </div>
                     <!-- end daily weather cards -->
                   
-                </div>
+                </div >
 
             </div>
 
         </div>
-
+        <div class ="five-day"></div>
         <script src="script.js"></script>
 </body>
 
