--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             </div>
             <div class="col-9">
                 <!-- This is where current weather data will appear -->
-                <div class="row">
-                    <div class="col-md-12" id="current">
+                <div class="">
+                    <div class="col-md-2" id="current">
 
                     </div>
                 </div>
@@ -54,6 +54,7 @@
                                 <p class="m-1">Sample task in progress</p>
                             </li>
                         </ul>
+                        <h2>Current Weather</h2>
                     </div>
                     <!-- end daily weather cards -->
                   
@@ -62,7 +63,9 @@
             </div>
 
         </div>
-        <div class ="five-day"></div>
+        <div class ="five-day">
+            <h2> Five day forecast</h2>
+        </div>
         <script src="script.js"></script>
 </body>
 
